# Eth

./: README.md  app.py  bot.py  config.py  data_fetcher.py  database.py  indicators.py  main.py  pyproject.toml  python-3.10  requirements.txt  signals.db  signals.py  telegram_alerts.py
bot/: signals.py  stats.py  strategy.py  telegram.py
static/: ETH-Sell.mp3.mpeg  sell.mp3.mpeg
trading-bot/: config.py
trading-bot/bot/: signals.py
trading-bot/web/: routes.py
web/: routes.py
